Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.12.3
-
None
-
-
e008c69e231169425e2ae602deabc0eb749376ab (qt/qtwayland/5.12)
Description
This is about the builds not passing (not to be confused with QTBUG-74896, which is about the quick compositor API being disabled).
This has already been fixed in the dev branch, but needs to be backported for 5.12
Attachments
Issue Links
- is duplicated by
-
QTBUG-76773 QtWayland does not compile with -no-opengl configured
-
- Closed
-
- relates to
-
QTBUG-74896 Qt Wayland Compositor QML API doesn't build without opengl
-
- Closed
-