Fix compile error with -no-opengl

[ChangeLog][Compositor] Fixed a build error when configured with -no-opengl.

This is the same fix as in dev's 8663de3f, but leaves the QML APIs disabled.

Fixes: QTBUG-76104
Change-Id: I9807144e0c0cf33d421c7c6adcb2664e1e67368c
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Tony Sarajärvi <tony.sarajarvi@qt.io>