src/compositor/compositor_api/qwaylandcompositor.cpp
@@ -243,8 +243,10 @@ QWaylandCompositorPrivate::~QWaylandCompositorPrivate()
     delete data_device_manager;
 #endif
 
+#if QT_CONFIG(opengl)
     // Some client buffer integrations need to clean up before the destroying the wl_display
     client_buffer_integration.reset();
+#endif
 
     wl_display_destroy(display);
 }
